--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -6,6 +6,11 @@ body {
   line-height: 18px;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -74,4 +79,13 @@ div {
 
 .right {
   float: right;
+}
+
+.hidden {
+  display: none;
+}
+
+.body-wrapper {
+  width: 960px;
+  margin: 0 auto;
 }
